// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`quote emails — snapshots > deposit receipt 1`] = `
{
  "fromName": "A1 Marine Storage",
  "html": "<!doctype html>
<html><body style="margin:0;padding:0;background:#f6f7f9">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f6f7f9">
<tr><td align="center" style="padding:24px 12px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border-radius:12px;overflow:hidden;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;color:#111827">
<tr><td style="height:4px;background:#DE3C37;font-size:0;line-height:0">&nbsp;</td></tr>
<tr><td style="padding:24px 24px 8px"><img src="https://a1marinestorage.ca/logo.png" alt="A1 Marine Storage" height="40" style="height:40px;width:auto;border:0;display:block" /></td></tr>
<tr><td style="padding:0 24px 24px;font-size:16px;line-height:1.6"><p>Hi Pat,</p>
<p><strong>Thanks — your deposit is received and your spot is booked.</strong></p>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="font-size:15px;margin:16px 0">
<tr><td style="padding:6px 0;border-bottom:1px solid #f3f4f6">Outdoor winter storage</td>
<td align="right" style="padding:6px 0;border-bottom:1px solid #f3f4f6;white-space:nowrap">$1,200.00</td></tr><tr><td style="padding:6px 0;border-bottom:1px solid #f3f4f6">Shrink wrapping</td>
<td align="right" style="padding:6px 0;border-bottom:1px solid #f3f4f6;white-space:nowrap">$600.00</td></tr>
<tr><td style="padding:10px 0 0">Total</td><td align="right" style="padding:10px 0 0">$2,344.75</td></tr>
<tr><td style="padding:4px 0;font-weight:700">Deposit paid</td><td align="right" style="padding:4px 0;font-weight:700">$586.19</td></tr>
<tr><td style="padding:4px 0;color:#6b7280">Balance due later</td><td align="right" style="padding:4px 0;color:#6b7280">$1,758.56</td></tr>
</table>
<p><strong>What happens next:</strong> we'll be in touch to schedule your drop-off. Nothing else is needed from you right now.</p>
<p style="font-size:14px;color:#6b7280">Your quote (Q-2026-0001) stays available here: <a href="https://quotes.a1marinestorage.ca/q/abc123" style="color:#DE3C37">view it any time</a>.</p></td></tr>
<tr><td style="padding:16px 24px 24px;border-top:1px solid #e5e7eb;font-size:13px;color:#6b7280"><div style="font-weight:600;color:#374151">A1 Marine Storage</div><div>(249) 444-0072</div><div>contact@a1marinestorage.ca</div><div><a href="https://a1marinestorage.ca" style="color:#DE3C37">a1marinestorage.ca</a></div></td></tr>
</table>
</td></tr></table>
</body></html>",
  "replyTo": "contact@a1marinestorage.ca",
  "subject": "Deposit received — you're booked in (Q-2026-0001)",
  "text": "Hi Pat,

Thanks — your deposit is received and your spot is booked.

- Outdoor winter storage: $1,200.00
- Shrink wrapping: $600.00

Total: $2,344.75
Deposit paid: $586.19
Balance due later: $1,758.56

What happens next: we'll be in touch to schedule your drop-off. Nothing else is
needed from you right now.

Your quote: https://quotes.a1marinestorage.ca/q/abc123

A1 Marine Storage
(249) 444-0072
contact@a1marinestorage.ca",
}
`;

exports[`quote emails — snapshots > expiry reminder (in season) 1`] = `
{
  "fromName": "A1 Marine Storage",
  "html": "<!doctype html>
<html><body style="margin:0;padding:0;background:#f6f7f9">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f6f7f9">
<tr><td align="center" style="padding:24px 12px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border-radius:12px;overflow:hidden;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;color:#111827">
<tr><td style="height:4px;background:#DE3C37;font-size:0;line-height:0">&nbsp;</td></tr>
<tr><td style="padding:24px 24px 8px"><img src="https://a1marinestorage.ca/logo.png" alt="A1 Marine Storage" height="40" style="height:40px;width:auto;border:0;display:block" /></td></tr>
<tr><td style="padding:0 24px 24px;font-size:16px;line-height:1.6"><p>Hi Pat,</p>
<p>Just a quick note that your quote <strong>Q-2026-0001</strong> is still open, and it's valid until October 15, 2026.</p>
<p>Spots do fill up by mid-October, so it&#39;s worth getting booked in.</p>
<p>If you'd like any changes, just reply to this email and we'll sort it out.</p>
<table role="presentation" cellpadding="0" cellspacing="0" style="margin:24px 0">
<tr><td style="border-radius:8px;background:#DE3C37">
<a href="https://quotes.a1marinestorage.ca/q/abc123" style="display:inline-block;padding:15px 28px;font-size:17px;font-weight:700;color:#ffffff;text-decoration:none">View Your Quote</a>
</td></tr></table></td></tr>
<tr><td style="padding:16px 24px 24px;border-top:1px solid #e5e7eb;font-size:13px;color:#6b7280"><div style="font-weight:600;color:#374151">A1 Marine Storage</div><div>(249) 444-0072</div><div>contact@a1marinestorage.ca</div><div><a href="https://a1marinestorage.ca" style="color:#DE3C37">a1marinestorage.ca</a></div></td></tr>
</table>
</td></tr></table>
</body></html>",
  "replyTo": "contact@a1marinestorage.ca",
  "subject": "Your quote is still open until October 15, 2026",
  "text": "Hi Pat,

Just a quick note that your quote Q-2026-0001 is still open, and it's valid until October 15, 2026.

Spots do fill up by mid-October, so it's worth getting booked in.

If you'd like any changes, just reply to this email and we'll sort it out.

https://quotes.a1marinestorage.ca/q/abc123

A1 Marine Storage
(249) 444-0072
contact@a1marinestorage.ca",
}
`;

exports[`quote emails — snapshots > quote replaced 1`] = `
{
  "fromName": "A1 Marine Storage",
  "html": "<!doctype html>
<html><body style="margin:0;padding:0;background:#f6f7f9">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f6f7f9">
<tr><td align="center" style="padding:24px 12px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border-radius:12px;overflow:hidden;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;color:#111827">
<tr><td style="height:4px;background:#DE3C37;font-size:0;line-height:0">&nbsp;</td></tr>
<tr><td style="padding:24px 24px 8px"><img src="https://a1marinestorage.ca/logo.png" alt="A1 Marine Storage" height="40" style="height:40px;width:auto;border:0;display:block" /></td></tr>
<tr><td style="padding:0 24px 24px;font-size:16px;line-height:1.6"><p>Hi Pat,</p>
<p><strong>We've updated your quote.</strong> We adjusted the shrink wrap line. The new version replaces the one we sent before — please use the link below from now on.</p>
<table role="presentation" cellpadding="0" cellspacing="0" style="margin:24px 0">
<tr><td style="border-radius:8px;background:#DE3C37">
<a href="https://quotes.a1marinestorage.ca/q/abc123" style="display:inline-block;padding:15px 28px;font-size:17px;font-weight:700;color:#ffffff;text-decoration:none">View Your Updated Quote</a>
</td></tr></table>
<p style="font-size:14px;color:#6b7280">The previous link will tell you it's been replaced, so there's no risk of approving the old one by mistake.</p></td></tr>
<tr><td style="padding:16px 24px 24px;border-top:1px solid #e5e7eb;font-size:13px;color:#6b7280"><div style="font-weight:600;color:#374151">A1 Marine Storage</div><div>(249) 444-0072</div><div>contact@a1marinestorage.ca</div><div><a href="https://a1marinestorage.ca" style="color:#DE3C37">a1marinestorage.ca</a></div></td></tr>
</table>
</td></tr></table>
</body></html>",
  "replyTo": "contact@a1marinestorage.ca",
  "subject": "We've updated your quote — Q-2026-0001",
  "text": "Hi Pat,

We've updated your quote. We adjusted the shrink wrap line. The new version replaces the
one we sent before — please use this link from now on:

https://quotes.a1marinestorage.ca/q/abc123

The previous link will tell you it's been replaced, so there's no risk of
approving the old one by mistake.

A1 Marine Storage
(249) 444-0072
contact@a1marinestorage.ca",
}
`;

exports[`quote emails — snapshots > quote sent 1`] = `
{
  "fromName": "A1 Marine Storage",
  "html": "<!doctype html>
<html><body style="margin:0;padding:0;background:#f6f7f9">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f6f7f9">
<tr><td align="center" style="padding:24px 12px">
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border-radius:12px;overflow:hidden;font-family:-apple-system,'Segoe UI',Roboto,Helvetica,Arial,sans-serif;color:#111827">
<tr><td style="height:4px;background:#DE3C37;font-size:0;line-height:0">&nbsp;</td></tr>
<tr><td style="padding:24px 24px 8px"><img src="https://a1marinestorage.ca/logo.png" alt="A1 Marine Storage" height="40" style="height:40px;width:auto;border:0;display:block" /></td></tr>
<tr><td style="padding:0 24px 24px;font-size:16px;line-height:1.6"><p>Hi Pat,</p>
<p>Your quote <strong>Q-2026-0001</strong> is ready — Winter storage 2026/27.</p>
<p style="color:#4b5563">Thanks for getting in touch.</p>
<p>You can review it, choose any optional services, and approve online. Your total updates as you choose.</p>
<table role="presentation" cellpadding="0" cellspacing="0" style="margin:24px 0">
<tr><td style="border-radius:8px;background:#DE3C37">
<a href="https://quotes.a1marinestorage.ca/q/abc123" style="display:inline-block;padding:15px 28px;font-size:17px;font-weight:700;color:#ffffff;text-decoration:none">View &amp; Approve Your Quote</a>
</td></tr></table>
<p style="font-size:14px;color:#6b7280">This quote is valid until October 15, 2026.</p></td></tr>
<tr><td style="padding:16px 24px 24px;border-top:1px solid #e5e7eb;font-size:13px;color:#6b7280"><div style="font-weight:600;color:#374151">A1 Marine Storage</div><div>(249) 444-0072</div><div>contact@a1marinestorage.ca</div><div><a href="https://a1marinestorage.ca" style="color:#DE3C37">a1marinestorage.ca</a></div></td></tr>
</table>
</td></tr></table>
</body></html>",
  "replyTo": "contact@a1marinestorage.ca",
  "subject": "Your quote Q-2026-0001 from A1 Marine Storage",
  "text": "Hi Pat,

Your quote Q-2026-0001 is ready — Winter storage 2026/27.

Thanks for getting in touch.

Review it, choose any optional services, and approve online:
https://quotes.a1marinestorage.ca/q/abc123

Valid until October 15, 2026.

A1 Marine Storage
(249) 444-0072
contact@a1marinestorage.ca",
}
`;
